# uv-k5-firmware-custom

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile-x64  Makefile  README.md
App/: CMakeLists.txt  audio.c  audio.h  board.c  main.c  radio.c  scheduler.c
App/app/: action.c  app.c  breakout.c  breakout.h  flashlight.c  fm.c  menu.c  spectrum.c  spectrum.h  uart.c
App/driver/: backlight.c  bk1080.c  bk4819.c  gpio.h  i2c.c  keyboard.c  st7565.c  systick.c  uart.c
Core/: CMakeLists.txt
Core/Inc/: py32f0xx_it.h
Core/Src/: main.c  py32f0xx_it.c
Drivers/: CMakeLists.txt
archive_V2/v4.3/: f4hwn.bandscope.elf  f4hwn.basic.elf  f4hwn.broadcast.elf  f4hwn.custom.elf  f4hwn.game.elf  f4hwn.rescueops.elf
cmake/: gcc-arm-none-eabi.cmake
